--- a/code/package.json
+++ b/code/package.json
@@ -13,6 +13,7 @@
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
+    "@eventide/message-db": "^1.2.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.3",
     "camelcase-keys": "^4.2.0",
